--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
     "react-native-gesture-handler": "~1.8.0",
-    "react-native-paper": "^4.4.1",
+    "react-native-imaged-card-view": "^0.0.11",
+    "react-native-paper": "^4.12.1",
     "react-native-paper-dates": "^0.4.6",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.9",
